--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ print(response.json())
 </pre>
 <input targetLanguage="text" id="lang">Enter language</input>
 <button onclick="callTranspiler()">Convert</button>
-<p id="result"></p>
+<p id="result">result goes here</p>
 <pre id="conversion">
+    convesion goes here
 </pre>
 <script>
 //    const target = Math.floor(Math.random() * 100) + 1;
