--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 <h1>Code example</h1>
-<p>This example comes from <a href+"https://dev.splunk.com/enterprise/reference/appinspect/appinspectapiepref/#:~:text=F%20app_package%3D%3Capp_package%3E-,Python,-import%20os%0Aimport">Splunk AppInspect docs.</a></p>
-<p><a href="https://www.homepage.com>Visit our homepage</a></p>
+<p>This example comes from <a href="https://dev.splunk.com/enterprise/reference/appinspect/appinspectapiepref/">Splunk AppInspect</a></p>
+<p><a href="https://www.youtube.com">Visit our homepage</a></p>
 <pre id="source">import os
 import requests
 from requests_toolbelt.multipart.encoder import MultipartEncoder
