--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+    <script type = "text/javascript" src="functions.js"></script>
     <title>Transpile from Python</title>
 </head>
 <body>
 <h1>Code example</h1>
 <p>This example comes from <a href="https://dev.splunk.com/enterprise/reference/appinspect/appinspectapiepref/">Splunk AppInspect</a></p>
-<p><a href="https://www.youtube.com">Visit our homepage</a></p>
+<!-- <p><a href="https://www.youtube.com">Visit our homepage</a></p> -->
 <pre id="source">import os
 import requests
 from requests_toolbelt.multipart.encoder import MultipartEncoder
@@ -31,27 +32,6 @@ print(response.json())
 <pre id="conversion">
     conversion goes here
 </pre>
-<script>
-//    const target = Math.floor(Math.random() * 100) + 1;
-//    let numGuesses = 0;
 
-    function callTranspiler() {
-//        numGuesses += 1;
-        const targetLanguage = document.getElementById("lang").value;
-        const resultParagraph = document.getElementById("result");
-        const conversionCodeblock = document.getElementById("conversion");
-//
-        resultParagraph.innerHTML = "Your target language is " + targetLanguage;
-        conversionCodeblock.innerHTML = "Hello World, written in " + targetLanguage;
-
-//        if (guess == target) {
-//            resultParagraph.innerHTML = "You got it! It took you " + numGuesses + " guesses.";
-//        } else if (guess < target) {
-//            resultParagraph.innerHTML = "Your guess is too low. Try again.";
-//       } else if (guess > target) {
-//            resultParagraph.innerHTML = "Your guess is too high. Try again.";
-//        }
-    }
-</script>
 </body>
 </html>
